<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_meu_perfil"
            android:title="@string/menu_perfil" />
        <item
            android:id="@+id/menu_novo_anuncio"
            android:title="@string/menu_novo_anuncio" />
        <item
            android:id="@+id/menu_meus_anuncios"
            android:title="@string/menu_meus_anuncios" />
        <item
            android:id="@+id/menu_hoje"
            android:title="@string/menu_arroba" />
        <item
            android:id="@+id/menu_favoritos"
            android:title="@string/menu_favoritos" />
        <item
            android:id="@+id/menu_sobre"
            android:title="@string/menu_sobre" />
        <item
            android:id="@+id/menu_sair"
            android:title="@string/menu_sair" />
    </group>

</menu>
