<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.expoagro.expoagrobrasil.controller.NovoComentarioActivity">

    <TextView
        android:id="@+id/nomeAnuncio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="ANÚNCIO"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="88dp" />

    <TextView
        android:id="@+id/nomeUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="Usuario diz:"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.073"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/nomeAnuncio" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputComentario"
        android:layout_width="328dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/nomeUsuario">

        <EditText
            android:id="@+id/campoComentario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/campo_comentario"
            android:inputType="textCapSentences|textMultiLine" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btnCancelar"
        android:layout_width="107dp"
        android:layout_height="50dp"
        android:layout_marginBottom="64dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/acao_cancelar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@+id/textInputComentario" />

    <Button
        android:id="@+id/btnCadastrar"
        android:layout_width="107dp"
        android:layout_height="50dp"
        android:layout_marginBottom="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="0dp"
        android:layout_marginStart="8dp"
        android:text="@string/acao_salvar"
        app:layout_constraintBottom_toBottomOf="@+id/btnCancelar"
        app:layout_constraintRight_toRightOf="@+id/textInputComentario" />

</android.support.constraint.ConstraintLayout>
